src/Test/Fixtures/Good/TypeQualifier/linearScratchQubit.lf
let linear scratch q: qubit = qalloc();