src/Test/Fixtures/Bad/BitQubit/unexpectedCommaSeparatedLiteralAfterMeasrBitDeclaration.lf
let q : bit = measr(q), 2;